--- a/css/styles.css
+++ b/css/styles.css
@@ -186,6 +186,7 @@ body {
 
 @media screen and (min-width: 1200px) {
   .contacts {
+    display: flex;
     align-items: center;
     gap: 40px;
   }
@@ -925,8 +926,8 @@ footer {
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
 
-  width: 408px;
-  height: 584px;
+  width: 392px;
+  height: 586px;
   border-radius: 4px;
   padding: 72px 24px 24px;
 
@@ -935,6 +936,13 @@ footer {
     0px 2px 1px rgba(0, 0, 0, 0.2);
 
   transition: transform var(--anim-fast), opacity var(--anim-fast);
+}
+
+@media screen and (min-width: 768px) {
+  .modal {
+    width: 408px;
+    height: 586px;
+  }
 }
 
 .backdrop.backdrop.is-hidden .modal {
@@ -1152,9 +1160,11 @@ footer {
   position: fixed;
   top: 0;
   left: 0;
+  display: flex;
+  flex-direction: column;
   width: 100vw;
   height: 100vh;
-  padding: 32px;
+  padding: 40px;
   background-color: var(--white-bg-clr);
   z-index: 999;
 
@@ -1166,22 +1176,92 @@ footer {
   transform: translateX(0);
 }
 
-.menu-container .menu-toggle {
+.menu-close {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   position: absolute;
-  top: 16px;
-  right: 16px;
-  color: #5c0505;
+  top: 24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  padding: 0;
+  cursor: pointer;
+
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color: var(--accent-color);
+  transition: background-color var(--anim-fast);
 }
 
 .mobile-menu {
-  padding: 0;
+  display: flex;
+  flex-direction: column;
+  padding-top: 40px;
   margin: 0;
   list-style: none;
+  gap: 40px;
 }
 
-.mobile-menu .link {
+.mobile-page:last-child {
+  margin-top: auto;
+}
+
+.b-menu-link {
+  background-color: var(--primary-brand-color);
+  transition: background-color var(--anim-fast);
+}
+
+.footer-link:focus {
+  background-color: var(--pressed-bg-clr);
+}
+
+.mobile-page {
   display: block;
-  padding: 10px;
-  color: #5441e9;
-  text-decoration: none;
+
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+
+  text-transform: capitalize;
+
+  color: var(--title-text-color);
+}
+
+.contact-menu {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  margin-bottom: 48px;
+  margin-top: auto;
+  gap: 40px;
+}
+
+.social-list-menu {
+  display: flex;
+  justify-content: flex-start;
+  gap: 56px;
+}
+
+.contact-page,
+.tel-number {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.1;
+
+  text-transform: capitalize;
+  color: var(--primary-brand-color);
+}
+
+.mail {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  color: var(--primary-text-color);
+}
+
+.mobile-menu.mobile-page.current {
+  color: var(--pressed-bg-clr);
 }
